--- a/views/converter.twig
+++ b/views/converter.twig
@@ -6,7 +6,7 @@
         <form action="/logout" class="my-1" method="POST">
           <button type="submit" class="btn btn-outline-secondary">Logout</button>
         </form>
-        <form action="/converter" class="mt-5" method="POST">
+        <form action="/transaction" class="mt-5" method="POST">
           <div class="form-group">
             <label for="sel1">Select currency:</label>
             <select class="form-control" name="currency" id="sel1">
@@ -14,14 +14,6 @@
               <option>{{ currency }}</option>  
               {% endfor %}
             </select>
-          </div>
-          <div class="form-group">
-            <input type="number" class="form-control" name="amount" placeholder="Enter amount">
-            {% if (error.amount) %}
-              <div class="alert alert-danger py-1" role="alert">
-                {{ error.amount.msg }}
-              </div>
-            {% endif %}
           </div>
           <button type="submit" class="btn btn-outline-secondary">Generate transaction</button>
         </form>
