--- a/views/converter.twig
+++ b/views/converter.twig
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col-6 mx-auto">
         <form action="/logout" class="my-1" method="POST">
+          <input type="hidden" name="_csrf" value="{{csrfToken}}">
           <button type="submit" class="btn btn-outline-secondary">Logout</button>
         </form>
         <form action="/transaction" class="mt-5" method="POST">
@@ -15,6 +16,7 @@
               {% endfor %}
             </select>
           </div>
+          <input type="hidden" name="_csrf" value="{{csrfToken}}">
           <button type="submit" class="btn btn-outline-secondary">Generate transaction</button>
         </form>
       </div>
