--- a/views/layouts/header.twig
+++ b/views/layouts/header.twig
@@ -8,3 +8,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-8 mx-auto text-center">
+      <div class="display-4 border border-secondary my-3">Welcome to currency converter!</div>
+    </div>
+  </div>
+</div>
