--- a/views/login.twig
+++ b/views/login.twig
@@ -22,6 +22,7 @@
             </div>
             {% endif %}
           </div>
+          <input type="hidden" name="_csrf" value="{{csrfToken}}">
           <button type="submit" class="btn btn-outline-secondary">Login</button>
         </form>
       </div>
