--- a/views/register.twig
+++ b/views/register.twig
@@ -31,6 +31,7 @@
             </div>
             {% endif %}
           </div>
+          <input type="hidden" name="_csrf" value="{{csrfToken}}">
           <button type="submit" class="btn btn-outline-secondary">Register</button>
         </form>
       </div>
