--- a/views/transactions.twig
+++ b/views/transactions.twig
@@ -21,7 +21,7 @@
               <td>{{ transaction.currency }}</td>
               <td>{{ transaction.amount }}</td>
               <td>{{ transaction.convertedAmount }}</td>
-              <td>{{ transaction.date }}</td>
+              <td>{{ transaction.createdAt }}</td>
             </tr>
           {% endfor %}
           </tbody>
